--- a/PokerNights-App/src/main/resources/application-dev.properties
+++ b/PokerNights-App/src/main/resources/application-dev.properties
@@ -29,7 +29,7 @@ eureka.client.fetch-registry=false
 # Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mikereynolds158@gmail.com
+spring.mail.username=[enter email here]
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
